<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginBottom="1dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/connect_string" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnConnect"
            android:layout_alignBottom="@+id/btnConnect"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/no_connection"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/voice_result"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toLeftOf="@+id/btnVoice"
            android:layout_toRightOf="@+id/textView9"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/voice_result_hint"
            android:singleLine="true" >
        </EditText>

        <ImageButton
            android:id="@+id/btnVoice"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/speak_now"
            android:visibility="invisible" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout1" >

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F0F0"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/text1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="2dp"
                android:text="@string/temperation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="2dp"
                android:text="@string/humidity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:layout_marginLeft="2dp"
                android:text="@string/lightIntention"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:layout_marginLeft="2dp"
                android:text="@string/gasIntention"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:layout_marginLeft="2dp"
                android:text="@string/DoorsWindowsSensor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView8" >

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/layout1" >

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn3" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn4" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/layout2"
                android:layout_marginLeft="10dp"
                android:text="@string/text2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/toggleButton1"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textOff="@string/switch1_off"
                    android:textOn="@string/switch1_on" />

                <ToggleButton
                    android:id="@+id/toggleButton2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textOff="@string/switch2_off"
                    android:textOn="@string/switch2_on" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/layout3" >

                <ToggleButton
                    android:id="@+id/toggleButton3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/switch3_off"
                    android:textOn="@string/switch3_on" />

                <ToggleButton
                    android:id="@+id/toggleButton4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/switch4_off"
                    android:textOn="@string/switch4_on" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/textView4"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/textView10"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView7"
                android:layout_alignLeft="@+id/textView11"
                android:layout_toRightOf="@+id/textView6"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView8"
                android:layout_marginLeft="11dp"
                android:layout_toRightOf="@+id/textView3"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layout1"
                android:layout_alignLeft="@+id/textView13"
                android:layout_marginLeft="10dp"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/textView14"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/layout4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_version"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView16"
                android:layout_marginLeft="10dp"
                android:text="@string/HWversion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView16"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView17"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>